Minor spacing fix

--- a/stylesheet/media_queries.css
+++ b/stylesheet/media_queries.css
@@ -1,3 +1,6 @@
+@media screen and (max-width: 1050px) {
+}
+
 @media screen and (max-width: 950px) {
   .menu_social {
     display: none;
@@ -9,5 +12,11 @@
 
   .nav_burg_menu_handle {
     display: flex;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .product_intro_section {
+    grid-template: 1fr 3fr repeat(2, 1fr) / repeat(2, 1fr);
   }
 }
